# rmoss_gazebo

./: LICENSE  README.md
.github/workflows/: ci.yml  setup_gazebo.sh  setup_ignition.sh
rmoss_gz_base/: CMakeLists.txt  README.md  package.xml
rmoss_gz_base/include/rmoss_gz_base/: chassis_controller.hpp  gimbal_controller.hpp  gz_chassis_actuator.hpp  gz_gimbal_actuator.hpp  gz_gimbal_encoder.hpp  gz_gimbal_imu.hpp  gz_light_bar_cmd.hpp  gz_odometry.hpp  gz_shoot_actuator.hpp  hardware_interface.hpp  odometry_publisher.hpp  pid.hpp  rmua19_robot_base_node.hpp  shooter_controller.hpp
rmoss_gz_base/src/: chassis_controller.cpp  gimbal_controller.cpp  odometry_publisher.cpp  pid.cpp  rmua19_robot_base_main.cpp  rmua19_robot_base_node.cpp  shooter_controller.cpp
rmoss_gz_base/src/gz_module/: gz_chassis_actuator.cpp  gz_gimbal_actuator.cpp  gz_gimbal_encoder.cpp  gz_gimbal_imu.cpp  gz_light_bar_cmd.cpp  gz_odometry.cpp  gz_shoot_actuator.cpp
rmoss_gz_bridge/: CMakeLists.txt  README.md  package.xml
rmoss_gz_bridge/include/rmoss_gz_bridge/: pose_bridge_node.hpp
rmoss_gz_bridge/src/: pose_bridge_main.cpp  pose_bridge_node.cpp
rmoss_gz_cam/: CMakeLists.txt  package.xml
rmoss_gz_cam/include/rmoss_gz_cam/: gz_cam.hpp  gz_cam_node.hpp
rmoss_gz_cam/launch/: gz_cam.launch.py
rmoss_gz_cam/src/: gz_cam.cpp  gz_cam_main.cpp  gz_cam_node.cpp
rmoss_gz_plugins/: CMakeLists.txt  README.md  package.xml
rmoss_ign_base/: CMakeLists.txt  README.md  package.xml
rmoss_ign_base/include/rmoss_ign_base/: advanced_chassis_controller.hpp  advanced_gimbal_controller.hpp  chassis_controller.hpp  chassis_gimbal_controller.hpp  chassis_gimbal_controller_base.hpp  chassis_simple_controller.hpp  gimbal_controller.hpp  gimbal_simple_controller.hpp  gimbal_state_publisher.hpp  ign_chassis_cmd.hpp  ign_chassis_cmd_publisher.hpp  ign_gimbal_cmd.hpp  ign_gimbal_cmd_publisher.hpp  ign_imu.hpp  ign_joint_encoder.hpp  ign_light_bar_cmd.hpp  ign_odometry.hpp  lidar_publisher.hpp  odometry_publisher.hpp  pid.hpp  rmua19_robot_base_node.hpp  shooter_controller.hpp  shooter_simple_controller.hpp  simple_chassis_controller.hpp  simple_gimbal_controller.hpp  simple_shooter_controller.hpp
rmoss_ign_base/include/rmoss_ign_robot_base/: chassis_simple_controller.hpp  gimbal_simple_controller.hpp
rmoss_ign_base/nodes/: chassis_simple_controller_node.cpp  gimbal_simple_controller_node.cpp  gimbal_state_publisher_node.cpp  rmua19_robot_base_node.cpp  shooter_simple_controller_node.cpp  simple_chassis_controller_node.cpp  simple_gimbal_controller_node.cpp  simple_shooter_controller_node.cpp
rmoss_ign_base/scripts/: ign_imu.cpp  ign_imu.hpp  ign_joint_encoder.cpp  ign_joint_encoder.hpp  test_gimbal_cmd.py
rmoss_ign_base/src/: advanced_chassis_controller.cpp  advanced_gimbal_controller.cpp  chassis_controller.cpp  chassis_gimbal_controller.cpp  chassis_gimbal_controller_base.cpp  chassis_simple_controller.cpp  gimbal_controller.cpp  gimbal_simple_controller.cpp  gimbal_state_publisher.cpp  ign_chassis_cmd.cpp  ign_chassis_cmd_publisher.cpp  ign_gimbal_cmd.cpp  ign_gimbal_cmd_publisher.cpp  ign_imu.cpp  ign_joint_encoder.cpp  ign_odometry.cpp  odometry_publisher.cpp  pid.cpp  rmua19_robot_base_main.cpp  rmua19_robot_base_node.cpp  shooter_controller.cpp  shooter_simple_controller.cpp  simple_chassis_controller.cpp  simple_gimbal_controller.cpp  simple_shooter_controller.cpp
rmoss_ign_base/src/controller/: chassis_controller.cpp  gimbal_controller.cpp  shooter_controller.cpp  simple_chassis_controller.cpp  simple_gimbal_controller.cpp
rmoss_ign_base/src/ign_module/: ign_gimbal_cmd.cpp  ign_joint_encoder.cpp  ign_light_bar_cmd.cpp
rmoss_ign_base/src/publisher/: gimbal_state_publisher.cpp  lidar_publisher.cpp  odometry_publisher.cpp
rmoss_ign_cam/include/rmoss_ign_cam/: ign_cam.hpp
rmoss_ign_cam/src/: ign_cam.cpp
rmoss_ign_plugins/: CMakeLists.txt  README.md  package.xml
rmoss_ign_plugins/env-hooks/: ignition.dsv.in  ignition.sh.in
rmoss_ign_plugins/plugins/light_indicator/: LightIndicator.cc  LightIndicator.hh
rmoss_ign_plugins/plugins/projectile_shooter/: ProjectileShooter.cc
rmoss_ign_plugins/src/mecanum_drive/: MecanumDrive.cpp  MecanumDrive.hh
rmoss_ign_plugins/src/mecanum_drive2/: MecanumDrive2.cc  MecanumDrive2.hh
rmoss_ign_plugins/src/projectile_shooter/: ProjectileShooter.cc  ProjectileShooter.cpp  ProjectileShooter.hh
rmoss_ign_plugins/test/scripts/: shoot_pub.sh
rmoss_ign_plugins/test/worlds/: light_indicator.sdf  projectile_shooter.sdf
rmoss_ign_robot_base/: CMakeLists.txt  README.md  package.xml
rmoss_ign_robot_base/include/rmoss_ign_robot_base/: gimbal_state_publisher.hpp  shooter_simple_controller.hpp
rmoss_ign_robot_base/nodes/: chassis_simple_controller_node.cpp  gimbal_simple_controller_node.cpp
rmoss_ign_robot_base/scripts/: test_chassis_cmd.py  test_shoot_cmd.py
rmoss_ign_robot_base/src/: gimbal_simple_controller.cpp  gimbal_state_publisher.cpp  shooter_simple_controller.cpp
