<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rmoss_gz_bridge</name>
    <version>1.0.0</version>
    <description>Ignition-ROS brdige for Ignition Gazebo Simulator</description>
    <maintainer email="zhenpeng.ge@qq.com">Zhenpeng Ge</maintainer>
    <license>Apache License 2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>rmoss_interfaces</depend>
    <depend>ros_gz_bridge</depend>
    <depend>rmoss_gz_resources</depend>
    <depend>rmoss_gz_plugins</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>

